# deepai_ai_course

./: .gitignore  kafe_verisi.db  pyproject.toml
artificial_neural_networks/: ann.md  ann.py
linear_regression/: batch.md  batch.py  compare.py  mini.md  mini.py  normal_equation.md  normal_equation.py  normalization.md  stochastic.md  stochastic.py
llm_openai_notetakechatbot/backend/: main.py  note1.py  note2.py  note3.py  note4.py  note5-test.py  note5.py  tool_decorator.py
llm_openai_notetakechatbot/frontend/: app.js  index.html  style.css
llm_openai_notetakechatbot/notes/: backend.md  frontend.md
logistic_regression/: logistic.md  logistic.py
neural_networks/: __init__.py  implementation.md  test_cnn_fashion_mnist.py  test_fashion_mnist.py
neural_networks/layers/: __init__.py  activations.py  base.py  conv.py  dense.py
neural_networks/losses/: __init__.py  losses.py
neural_networks/models/: sequential.py
neural_networks/optimizers/: __init__.py  optimizers.py
numpy/: 1_school_class_mean.py  2_market_weekly_sales.py  3_factory_shift_efficiency.py  4_school_canteen_sales.py  5_class_attendance_tracking.py  class_attendance_tracking.py  factory_shift_efficiency.py  market_weekly_sales.py  school_canteen_sales.py  school_class_mean.py
tools_mixed/: 1_coffee_shop.py  kod_aciklamalari.md  pivot_tablo_nedir.md
