[project]
name = "deepai-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
